notebook 3 updated - fix in the target_imputer features

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/05_Random_Search_LightGBM.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/05_Random_Search_LightGBM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e68ab512",
    "metadata": {},
    "outputs": [],
@@ -18,8 +18,9 @@
     "from sklearn.model_selection import (\n",
     "    train_test_split, \n",
     "    KFold, \n",
-    "    cross_val_score, \n",
-    "    GridSearchCV\n",
+    "    cross_val_score,\n",
+    "    StratifiedKFold, \n",
+    "    RandomizedSearchCV\n",
     ")\n",
     "from sklearn.metrics import (\n",
     "    classification_report, \n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3d02d0d6",
    "metadata": {},
    "outputs": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6a47ec99",
    "metadata": {},
    "outputs": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8373f460",
    "metadata": {},
    "outputs": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1ad8675d",
    "metadata": {},
    "outputs": [
@@ -143,17 +144,27 @@
      "text": [
       "--- Defining bases and universal Imputer ---\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature count: 134\n",
+      "Number of training samples: 307511\n"
+     ]
     }
    ],
    "source": [
     "print(\"--- Defining bases and universal Imputer ---\")\n",
     "\n",
     "# 1. Prepare Features (X) and Target (y)\n",
-    "EXCLUDED_COLS = ['SK_ID_CURR', 'TARGET'] \n",
-    "features = [col for col in df_train_final.columns if col not in EXCLUDED_COLS]\n",
+    "TARGET = \"TARGET\"\n",
     "\n",
-    "X = df_train_final[features]\n",
-    "y = df_train_final['TARGET']"
+    "X = df_train_final.drop(columns=[TARGET], errors=\"ignore\")\n",
+    "y = df_train_final[TARGET]\n",
+    "\n",
+    "print(f\"Feature count: {X.shape[1]}\")\n",
+    "print(f\"Number of training samples: {X.shape[0]}\")"
    ]
   },
   {
@@ -166,10 +177,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Starting: Grid Search for LightGBM ---\n",
-      "--- Grid Search running on 12 combinations ---\n",
-      "Total fits to perform: 36\n",
-      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
+      "\n",
+      "=== Starting RandomizedSearchCV with 40 iterations ===\n",
+      "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n"
      ]
     },
     {
@@ -179,97 +189,74 @@
       "/usr/local/lib/python3.12/dist-packages/joblib/externals/loky/process_executor.py:782: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Grid Search completed in 4987.27 seconds.\n",
-      "\n",
-      "=======================================================\n",
-      "🏆 Optimal Hyperparameters Found via Grid Search:\n",
-      "Best AUC Score (Mean CV): 0.7641\n",
-      "Best Parameters: {'learning_rate': 0.01, 'n_estimators': 1000, 'num_leaves': 63}\n",
-      "=======================================================\n",
-      "\n",
-      "Model optimized with best parameters stored in 'model_optimized_lgbm'.\n"
-     ]
     }
    ],
    "source": [
-    "# Hyperparameter Tuning via Grid Search (LightGBM)\n",
+    "# --- Randomized Search for LightGBM ---\n",
     "\n",
-    "print(\"--- Starting: Grid Search for LightGBM ---\")\n",
+    "# ================================================================\n",
+    "# Randomized Search\n",
+    "# ================================================================\n",
     "\n",
-    "# 1. Prepare Data\n",
-    "\n",
-    "# 2. Define the Model\n",
-    "lgbm_estimator = lgb.LGBMClassifier(\n",
-    "    objective='binary',\n",
-    "    metric='auc',\n",
-    "    boosting_type='gbdt',\n",
-    "    n_jobs=-1,\n",
+    "lgbm = lgb.LGBMClassifier(\n",
+    "    objective=\"binary\",\n",
+    "    boosting_type=\"gbdt\",\n",
     "    random_state=42,\n",
-    "    verbose=-1\n",
+    "    n_jobs=-1,\n",
     ")\n",
     "\n",
-    "# 3. Define the Hyperparameter Grid\n",
-    "# We keep the grid small to manage Colab's time/memory limits.\n",
-    "param_grid = {\n",
-    "    # Number of trees: Test low and high values\n",
-    "    'n_estimators': [500, 1000], \n",
-    "    \n",
-    "    # Learning rate (step size): Crucial for speed vs. accuracy\n",
-    "    'learning_rate': [0.05, 0.01],\n",
-    "    \n",
-    "    # Tree complexity (affects overfitting): Test low, medium, and high complexity\n",
-    "    'num_leaves': [15, 31, 63],\n",
+    "# Hyperparameter distributions (Wide but efficient)\n",
+    "param_dist = {\n",
+    "    \"num_leaves\": [15, 31, 50, 70, 90],\n",
+    "    \"learning_rate\": [0.005, 0.01, 0.02, 0.03, 0.05],\n",
+    "    \"n_estimators\": [300, 500, 700, 900, 1100],\n",
+    "    \"max_depth\": [-1, 6, 8, 12],\n",
+    "    \"min_child_samples\": [5, 10, 20, 30, 50],\n",
+    "    \"subsample\": [0.6, 0.7, 0.8, 0.9, 1.0],\n",
+    "    \"colsample_bytree\": [0.6, 0.7, 0.8, 0.9, 1.0],\n",
     "}\n",
     "\n",
-    "# 4. Set up Grid Search with Cross-Validation\n",
-    "# Use 3 folds (NFOLDS=3) for speed. Scoring is based on AUC.\n",
-    "NFOLDS = 3\n",
-    "kfold = KFold(n_splits=NFOLDS, shuffle=True, random_state=42)\n",
+    "# Number of parameter sets to try\n",
+    "N_ITER = 40   # This is the sweet spot for Colab (≈ 5–10 min)\n",
     "\n",
-    "grid_search = GridSearchCV(\n",
-    "    estimator=lgbm_estimator,\n",
-    "    param_grid=param_grid,\n",
-    "    scoring='roc_auc',\n",
-    "    cv=kfold,\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "print(f\"\\n=== Starting RandomizedSearchCV with {N_ITER} iterations ===\")\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=lgbm,\n",
+    "    param_distributions=param_dist,\n",
+    "    n_iter=N_ITER,\n",
+    "    scoring=\"roc_auc\",\n",
+    "    cv=cv,\n",
+    "    verbose=2,\n",
     "    n_jobs=-1,\n",
-    "    verbose=2  # Show detailed progress\n",
+    "    random_state=42,\n",
     ")\n",
     "\n",
-    "# 5. Execute Grid Search\n",
-    "print(f\"--- Grid Search running on {len(param_grid['n_estimators']) * len(param_grid['learning_rate']) * len(param_grid['num_leaves'])} combinations ---\")\n",
-    "print(f\"Total fits to perform: {NFOLDS * len(param_grid['n_estimators']) * len(param_grid['learning_rate']) * len(param_grid['num_leaves'])}\")\n",
+    "random_search.fit(X, y)\n",
     "\n",
-    "start_time = time()\n",
-    "grid_search.fit(X, y)\n",
-    "end_time = time()\n",
+    "# ================================================================\n",
+    "# Results\n",
+    "# ================================================================\n",
     "\n",
-    "print(f\"✅ Grid Search completed in {(end_time - start_time):.2f} seconds.\")\n",
+    "print(\"\\n=== Randomized Search Completed ===\")\n",
+    "print(f\"Best ROC-AUC: {random_search.best_score_:.5f}\")\n",
+    "print(\"Best params:\")\n",
+    "print(random_search.best_params_)\n",
     "\n",
+    "# Save best params for Notebook 06\n",
+    "params_path = os.path.join(cfg.MODEL_DIR, \"best_params.json\")\n",
+    "with open(params_path, \"w\") as f:\n",
+    "    json.dump(random_search.best_params_, f, indent=4)\n",
     "\n",
-    "# 6. Extract and Report Results\n",
+    "print(f\"Saved best params to {params_path}\")\n",
     "\n",
-    "# Get the best parameters and score\n",
-    "best_params = grid_search.best_params_\n",
-    "best_score = grid_search.best_score_\n",
-    "best_estimator = grid_search.best_estimator_\n",
+    "# Save raw best estimator (not final model)\n",
+    "best_model_path = os.path.join(cfg.MODEL_DIR, \"best_lgbm_random.pkl\")\n",
+    "joblib.dump(random_search.best_estimator_, best_model_path)\n",
     "\n",
-    "print(\"\\n=======================================================\")\n",
-    "print(f\"🏆 Optimal Hyperparameters Found via Grid Search:\")\n",
-    "print(f\"Best AUC Score (Mean CV): {best_score:.4f}\")\n",
-    "print(f\"Best Parameters: {best_params}\")\n",
-    "print(\"=======================================================\")\n",
-    "\n",
-    "\n",
-    "# 7. Final Model for Deployment\n",
-    "\n",
-    "# Update the global model variable with the optimized settings\n",
-    "model_optimized_lgbm = best_estimator \n",
-    "print(\"\\nModel optimized with best parameters stored in 'model_optimized_lgbm'.\")"
+    "print(f\"Saved best LightGBM estimator to {best_model_path}\")\n"
    ]
   }
  ],
