still training with randon search grid

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/03_Feature_Eng.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/03_Feature_Eng.ipynb
@@ -10,20 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: category_encoders in /usr/local/lib/python3.12/dist-packages (2.9.0)\n",
+      "Collecting category_encoders\n",
+      "  Downloading category_encoders-2.9.0-py3-none-any.whl.metadata (7.9 kB)\n",
       "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (2.0.2)\n",
       "Requirement already satisfied: pandas>=1.0.5 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (2.2.2)\n",
       "Requirement already satisfied: patsy>=0.5.1 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (1.0.2)\n",
       "Requirement already satisfied: scikit-learn>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (1.6.1)\n",
       "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (1.16.3)\n",
-      "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (0.14.5)\n",
+      "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (0.14.6)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.5->category_encoders) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.5->category_encoders) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.5->category_encoders) (2025.2)\n",
       "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.6.0->category_encoders) (1.5.2)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.6.0->category_encoders) (3.6.0)\n",
       "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.12/dist-packages (from statsmodels>=0.9.0->category_encoders) (25.0)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category_encoders) (1.17.0)\n"
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category_encoders) (1.17.0)\n",
+      "Downloading category_encoders-2.9.0-py3-none-any.whl (85 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m85.9/85.9 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: category_encoders\n",
+      "Successfully installed category_encoders-2.9.0\n"
      ]
     }
    ],
@@ -247,7 +252,13 @@
      "text": [
       "--- Starting Micro Feature Engineering ---\n",
       "✅ DAYS_EMPLOYED anomaly fixed and replaced with NaN.\n",
-      "✅ Created 3 core ratio features.\n",
+      "✅ Created 3 core ratio features.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ TIME_INDEX converted to numerical YEAR and original index removed.\n",
       "\n",
       "Training set shape after revised feature engineering: (307511, 135)\n"
@@ -326,12 +337,13 @@
     "\n",
     "from category_encoders import TargetEncoder\n",
     "from sklearn.model_selection import KFold\n",
-    "import re"
+    "import re\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ed72a400",
    "metadata": {},
    "outputs": [
@@ -339,107 +351,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Starting: K-Fold Target Encoding ---\n",
-      "Found 16 categorical features to encode.\n",
-      "  > Encoded NAME_CONTRACT_TYPE with K-Fold CV.\n",
-      "  > Encoded CODE_GENDER with K-Fold CV.\n",
-      "  > Encoded FLAG_OWN_CAR with K-Fold CV.\n",
-      "  > Encoded FLAG_OWN_REALTY with K-Fold CV.\n",
-      "  > Encoded NAME_TYPE_SUITE with K-Fold CV.\n",
-      "  > Encoded NAME_INCOME_TYPE with K-Fold CV.\n",
-      "  > Encoded NAME_EDUCATION_TYPE with K-Fold CV.\n",
-      "  > Encoded NAME_FAMILY_STATUS with K-Fold CV.\n",
-      "  > Encoded NAME_HOUSING_TYPE with K-Fold CV.\n",
-      "  > Encoded OCCUPATION_TYPE with K-Fold CV.\n",
-      "  > Encoded WEEKDAY_APPR_PROCESS_START with K-Fold CV.\n",
-      "  > Encoded ORGANIZATION_TYPE with K-Fold CV.\n",
-      "  > Encoded FONDKAPREMONT_MODE with K-Fold CV.\n",
-      "  > Encoded HOUSETYPE_MODE with K-Fold CV.\n",
-      "  > Encoded WALLSMATERIAL_MODE with K-Fold CV.\n",
-      "  > Encoded EMERGENCYSTATE_MODE with K-Fold CV.\n",
+      "--- Starting: K-Fold Target Encoding (Leakage-safe) ---\n",
+      "Number of categorical features: 16\n",
+      "Categorical features: ['NAME_CONTRACT_TYPE', 'CODE_GENDER', 'FLAG_OWN_CAR', 'FLAG_OWN_REALTY', 'NAME_TYPE_SUITE', 'NAME_INCOME_TYPE', 'NAME_EDUCATION_TYPE', 'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE', 'OCCUPATION_TYPE', 'WEEKDAY_APPR_PROCESS_START', 'ORGANIZATION_TYPE', 'FONDKAPREMONT_MODE', 'HOUSETYPE_MODE', 'WALLSMATERIAL_MODE', 'EMERGENCYSTATE_MODE']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Categorical features list saved to: /content/drive/MyDrive/Project_01/reports/categorical_features.csv\n",
+      "  -> Fitting TargetEncoder on fold 1/5...\n",
+      "  -> Fitting TargetEncoder on fold 2/5...\n",
+      "  -> Fitting TargetEncoder on fold 3/5...\n",
+      "  -> Fitting TargetEncoder on fold 4/5...\n",
+      "  -> Fitting TargetEncoder on fold 5/5...\n",
       "\n",
-      "✅ Target Encoding Complete. Final Feature Count:\n",
+      "--- Fitting final TargetEncoder on the full training set (for test + API) ---\n",
+      "✅ OOF Target Encoding completed. Encoded TRAIN shape: (307511, 16)\n",
+      "✅ TEST Target Encoding completed. Encoded TEST shape: (48744, 16)\n",
+      "\n",
+      "Shapes after adding encoded features and dropping raw categoricals:\n",
+      "  > Train: (307511, 135)\n",
+      "  > Test:  (48744, 134)\n",
+      "\n",
+      "✅ Target Encoding and name cleaning complete. Final Feature Count:\n",
       "  > Train Shape: (307511, 135)\n",
-      "  > Test Shape: (48744, 134)\n"
+      "  > Test Shape:  (48744, 134)\n",
+      "✅ MLOps Artifact: Final TargetEncoder saved to: /content/drive/MyDrive/Project_01/models/final_target_encoder.pkl\n"
      ]
     }
    ],
    "source": [
     "# Target Encoding and Final Cleanup\n",
     "\n",
-    "# Imports are omitted as requested, assuming TargetEncoder, KFold, pd, np, and re are imported.\n",
+    "print(\"--- Starting: K-Fold Target Encoding (Leakage-safe) ---\")\n",
     "\n",
-    "print(\"--- Starting: K-Fold Target Encoding ---\")\n",
-    "\n",
-    "# 1. Identify Categorical Features\n",
-    "# Select all object (string) and category columns\n",
+    "# 1. Identify categorical features (raw, before encoding)\n",
     "categorical_features = df_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
-    "\n",
-    "#Create categorical features table as a MLOPs artifact \n",
-    "categorical_features_df = pd.DataFrame(categorical_features, columns = ['cat_feat'])\n",
-    "categorical_features_df.to_csv(os.path.join(cfg.REPORT_DIR, 'categorical_features.csv'))\n",
-    "\n",
-    "# Store the target column and the target values\n",
     "TARGET_COLUMN = 'TARGET'\n",
-    "y_train = df_train_final[TARGET_COLUMN]\n",
-    "print(f\"Found {len(categorical_features)} categorical features to encode.\")\n",
     "\n",
+    "print(f\"Number of categorical features: {len(categorical_features)}\")\n",
+    "print(f\"Categorical features: {categorical_features}\")\n",
     "\n",
-    "# 2. Target Encoding Setup (K-Fold CV)\n",
-    "NFOLDS = 5\n",
-    "kf = KFold(n_splits=NFOLDS, shuffle=True, random_state=42)\n",
+    "# Optional: save categorical features list as an artifact\n",
+    "categorical_features_df = pd.DataFrame(categorical_features, columns=['cat_feat'])\n",
+    "categorical_features_path = os.path.join(cfg.REPORT_DIR, 'categorical_features.csv')\n",
+    "categorical_features_df.to_csv(categorical_features_path, index=False)\n",
+    "print(f\"✅ Categorical features list saved to: {categorical_features_path}\")\n",
     "\n",
-    "# Create empty DataFrame to store the new encoded features (using copies for safety)\n",
-    "df_train_encoded = df_train_final.copy() \n",
+    "# 2. Out-of-Fold Target Encoding for the TRAIN set\n",
+    "N_FOLDS = 5\n",
+    "kf = KFold(n_splits=N_FOLDS, shuffle=True, random_state=42)\n",
     "\n",
+    "# DataFrame to hold OOF encoded values (same index as df_train_final)\n",
+    "oof_encoded = pd.DataFrame(index=df_train_final.index, columns=categorical_features, dtype=float)\n",
     "\n",
-    "# --- 3. Apply K-Fold Target Encoding to TRAIN SET ---\n",
-    "for col in categorical_features:\n",
-    "    # Create a new feature column for the encoded mean\n",
-    "    df_train_encoded[f'{col}_TARGET_ENC'] = np.nan\n",
+    "for fold, (train_idx, val_idx) in enumerate(kf.split(df_train_final), start=1):\n",
+    "    print(f\"  -> Fitting TargetEncoder on fold {fold}/{N_FOLDS}...\")\n",
     "    \n",
-    "    for fold, (train_index, val_index) in enumerate(kf.split(df_train_final, y_train)):\n",
-    "        # Encoder is fitted on the remaining K-1 folds (train_index)\n",
-    "        encoder = TargetEncoder(cols=[col])\n",
-    "        encoder.fit(df_train_final.iloc[train_index], y_train.iloc[train_index])\n",
-    "        \n",
-    "        # Encoder is applied to the current fold (val_index)\n",
-    "        df_train_encoded.loc[val_index, f'{col}_TARGET_ENC'] = encoder.transform(df_train_final.iloc[val_index])[col]\n",
-    "        \n",
-    "    print(f\"  > Encoded {col} with K-Fold CV.\")\n",
+    "    te_fold = TargetEncoder(cols=categorical_features, smoothing=0.3)\n",
+    "    te_fold.fit(\n",
+    "        df_train_final.loc[train_idx, categorical_features],\n",
+    "        df_train_final.loc[train_idx, TARGET_COLUMN]\n",
+    "    )\n",
+    "    \n",
+    "    # Transform validation fold and store only encoded columns\n",
+    "    encoded_val = te_fold.transform(df_train_final.loc[val_idx, categorical_features])\n",
+    "    # Keep only the encoded categorical columns\n",
+    "    encoded_val = encoded_val[categorical_features]\n",
+    "    \n",
+    "    oof_encoded.iloc[val_idx] = encoded_val.values\n",
     "\n",
-    "# --- 4. Apply Encoding to TEST SET (FIXED: Isolate Categoricals) ---\n",
-    "\n",
-    "# a. Re-fit the encoder on the *entire* original training set's categorical columns\n",
-    "final_encoder = TargetEncoder(cols=categorical_features)\n",
-    "final_encoder.fit(df_train_final[categorical_features], y_train) \n",
-    "\n",
-    "# b. Transform ONLY the categorical columns of the test set\n",
-    "df_test_categoricals = df_test_final[categorical_features]\n",
-    "df_test_transformed = final_encoder.transform(df_test_categoricals)\n",
-    "\n",
-    "# c. Rename the new columns to match the train set names\n",
-    "rename_map = {col: f'{col}_TARGET_ENC' for col in categorical_features}\n",
-    "df_test_transformed.rename(columns=rename_map, inplace=True)\n",
-    "\n",
-    "# d. Drop original categorical columns from the test frame and merge the new features\n",
-    "df_test_final = df_test_final.drop(columns=categorical_features)\n",
-    "df_test_final = pd.merge(\n",
-    "    df_test_final, \n",
-    "    df_test_transformed, \n",
-    "    left_index=True, \n",
-    "    right_index=True, \n",
-    "    how='left'\n",
+    "# 3. Fit a FINAL TargetEncoder on the FULL TRAIN set (for TEST + INFERENCE)\n",
+    "print(\"\\n--- Fitting final TargetEncoder on the full training set (for test + API) ---\")\n",
+    "final_target_encoder = TargetEncoder(cols=categorical_features, smoothing=0.3)\n",
+    "final_target_encoder.fit(\n",
+    "    df_train_final[categorical_features],\n",
+    "    df_train_final[TARGET_COLUMN]\n",
     ")\n",
     "\n",
+    "# Handle any remaining NaNs in OOF encoded data (e.g., if some rows were not covered properly)\n",
+    "encoded_full_train = final_target_encoder.transform(df_train_final[categorical_features])[categorical_features]\n",
+    "oof_encoded = oof_encoded.fillna(encoded_full_train)\n",
     "\n",
-    "# 5. Drop Original Categorical Columns from TRAIN SET\n",
-    "df_train_final = df_train_encoded.drop(columns=categorical_features)\n",
+    "# Rename encoded columns with a clear suffix\n",
+    "oof_encoded.columns = [f\"{col}_TARGET_ENC\" for col in categorical_features]\n",
     "\n",
+    "print(f\"✅ OOF Target Encoding completed. Encoded TRAIN shape: {oof_encoded.shape}\")\n",
     "\n",
-    "# 6. Final Cleanup: LightGBM Name Safety\n",
-    "# Function to remove problematic characters that break LightGBM/XGBoost (like [,] <, etc.)\n",
-    "def clean_names(df):\n",
+    "# 4. Apply TargetEncoder to the TEST set using the final encoder\n",
+    "encoded_test = final_target_encoder.transform(df_test_final[categorical_features])[categorical_features]\n",
+    "encoded_test.columns = [f\"{col}_TARGET_ENC\" for col in categorical_features]\n",
+    "\n",
+    "print(f\"✅ TEST Target Encoding completed. Encoded TEST shape: {encoded_test.shape}\")\n",
+    "\n",
+    "# 5. Drop raw categorical features and append encoded ones (TRAIN and TEST)\n",
+    "df_train_final = pd.concat(\n",
+    "    [\n",
+    "        df_train_final.drop(columns=categorical_features, errors='ignore'),\n",
+    "        oof_encoded\n",
+    "    ],\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "df_test_final = pd.concat(\n",
+    "    [\n",
+    "        df_test_final.drop(columns=categorical_features, errors='ignore'),\n",
+    "        encoded_test\n",
+    "    ],\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nShapes after adding encoded features and dropping raw categoricals:\")\n",
+    "print(f\"  > Train: {df_train_final.shape}\")\n",
+    "print(f\"  > Test:  {df_test_final.shape}\")\n",
+    "\n",
+    "# 6. Clean column names (remove special characters) – same function used before\n",
+    "def clean_names(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    cols = df.columns\n",
     "    new_cols = []\n",
     "    for col in cols:\n",
@@ -451,12 +480,14 @@
     "df_train_final = clean_names(df_train_final)\n",
     "df_test_final = clean_names(df_test_final)\n",
     "\n",
-    "print(f\"\\n✅ Target Encoding Complete. Final Feature Count:\")\n",
+    "print(f\"\\n✅ Target Encoding and name cleaning complete. Final Feature Count:\")\n",
     "print(f\"  > Train Shape: {df_train_final.shape}\")\n",
-    "print(f\"  > Test Shape: {df_test_final.shape}\")\n",
+    "print(f\"  > Test Shape:  {df_test_final.shape}\")\n",
     "\n",
-    "# Optional: You can now save the final DataFrames as Parquet files here \n",
-    "# before proceeding to Block 15 (Model Training)."
+    "# 7. Save FINAL TargetEncoder as MLOps artifact (used later by the API)\n",
+    "encoder_path = os.path.join(cfg.MODEL_DIR, 'final_target_encoder.pkl')\n",
+    "joblib.dump(final_target_encoder, encoder_path)\n",
+    "print(f\"✅ MLOps Artifact: Final TargetEncoder saved to: {encoder_path}\")"
    ]
   },
   {
